More configuration and readme file changes